--- a/styles/home.css
+++ b/styles/home.css
@@ -35,65 +35,79 @@ li {
 
 
 /* CONTENT */
+
 /* MAIN */
 main {
 	width: 100%;
 	padding: 24px 20px 20px 20px;
 }
+
 main .title {
 	color: var(--dark-blue);
 	font-size: 28px;
 	font-weight: 600;
 	margin-bottom: 10px;
 }
+
 main .breadcrumbs {
 	display: flex;
 	grid-gap: 6px;
 }
+
 main .breadcrumbs li,
 main .breadcrumbs li a {
 	font-size: 14px;
 }
+
 main .breadcrumbs li a {
 	color: var(--blue);
 }
+
 main .breadcrumbs li a.active,
 main .breadcrumbs li.divider {
 	color: var(--purple);
 	pointer-events: none;
 }
+
 main .card {
 	padding: 20px;
 	border-radius: 10px;
 	background: var(--light);
 	box-shadow: 4px 4px 16px rgba(0, 0, 0, .05);
 }
+
 main .data {
 	display: flex;
 	grid-gap: 20px;
 	margin-top: 20px;
 }
+
 main .data .summary {
 	padding: 20px;
 	width: 70%;
 }
+
 main .card .head {
 	color: var(--dark-blue);
 	margin-bottom: 24px;
 }
+
 main .card .head h3 {
 	font-size: 20px;
 	font-weight: 600;
 }
+
 main .summary .chart {
 	width: 100%;
 	max-width: 100%;
 	overflow-x: auto;
 	scrollbar-width: none;
 }
+
 main .summary .chart::-webkit-scrollbar {
 	display: none;
 }
+
 main .right-section {
 	width: 30%;
 	max-height: 450px;
@@ -101,17 +115,21 @@ main .right-section {
 	flex-direction: column;
 	align-items: center;
 }
+
 main .right-section .balance {
 	width: 100%;
 	max-height: 120px;
 	height: 30%;
 }
+
 main .right-section .balance h2{
 	color: var(--purple);
 }
+
 main .right-section .balance .head{
 	margin-bottom: 15px;
 }
+
 main .right-section .goals {
 	width: 100%;
 	margin-top: 20px;
@@ -119,6 +137,7 @@ main .right-section .goals {
 	height: 70%;
 	overflow-y: auto;
 }
+
 main .goals li {
 	padding: 12px;
 	margin: 12px 0 12px 0;
@@ -126,11 +145,13 @@ main .goals li {
 	background: var(--grey);
 	box-shadow: 4px 4px 16px rgba(0, 0, 0, .05);
 }
+
 main .goals li h3 {
 	color: var(--purple);
 	font-size: 20px;
 	font-weight: 900;
 }
+
 main .goals li .progress {
 	display: block;
 	margin-top: 18px;
@@ -142,6 +163,7 @@ main .goals li .progress {
 	position: relative;
 	margin-bottom: 4px;
 }
+
 main .goals li .progress::before {
 	content: '';
 	position: absolute;
@@ -151,20 +173,62 @@ main .goals li .progress::before {
 	background: var(--blue);
 	width: var(--value);
 }
+
 main .goals li .label {
 	font-size: 14px;
 	font-weight: 700;
 }
+
 main .history{
 	display: flex;
 	grid-gap: 20px;
 	margin-top: 20px;
 	flex-wrap: wrap;
 }
+
 main .history .card{
 	flex-grow: 1;
 	padding: 20px;
 }
+
+
+/* TABLE */
+#history_cointener {
+    margin: 150px auto;
+    width: 600px;
+}
+
+table {
+    background: #a37da7;
+    text-align: left;
+    width: 100%;
+
+    border-collapse: collapse;
+}
+
+th,
+td {
+    padding: 9px;
+    border-right: solid 1px white;
+    color: white;
+}
+
+thead {
+    background-color: #7F5A83;
+    ;
+    border-bottom: solid 5px white;
+    color: white;
+}
+
+tr:nth-child(odd) {
+    background-color: #995e9f;
+}
+
+tbody tr:hover {
+    background: rgba(149, 90, 149, 0.4)
+}
+/* TABLE */
+
 /* MAIN */
 /* CONTENT */
 
