--- a/styles/expenses.css
+++ b/styles/expenses.css
@@ -9,6 +9,7 @@
 
 main {
     width: 100%;
+    height: 125vh;
     padding: 24px 20px 20px 20px;
 }
 
@@ -20,343 +21,186 @@ main .card {
     min-height: 40vh;
 }
 
+main .data {
+    display: flex;
+    grid-gap: 20px;
+}
+
+
 /*------------------------------- formulario --------------------------------------------*/
 
-.container {
-    max-width: 700px;
-    width: 100%;
-    background: #fff;
-    padding: 25px 25px;
-    border-radius: 5px;
-    z-index: 1;
+main .data .expenses_page {
+    width: 80%;
+    height: 40hv;
 }
 
-.container .title {
-    font-size: 24px;
-    font-weight: 500;
+.expenses_page .title {
     position: relative;
+    font-size: 24px;
+    padding-bottom: 5px;
+    margin-bottom: 2%;
+    font-weight: 600;
 }
 
-.container .title::before {
+.expenses_page .title::before {
     content: '';
     position: absolute;
-    left: 0;
     bottom: 0;
     height: 3px;
-    width: 230px;
+    width: 36%;
     background: linear-gradient(135deg, #71b7e6, #9b59b6);
 }
 
-.container form .register-input {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 20px 12px 0;
+.form_register {
+    width: 100%;
 }
 
-form .register-input .input-box {
-    margin-bottom: 15px;
-    width: calc(100%/2- 20px);
+.position_register {
+    display: inline-block;
+    padding: 0px 10px 15px 15px;
+    width: 49%;
 }
 
-.register-input .input-box .details_input {
-    display: block;
-    font-weight: 500;
-    margin-bottom: 5px;
-}
+.form_register input {
 
-.register-input .input-box input {
+    padding: 10px;
+    margin-bottom: 10px;
     height: 45px;
     width: 100%;
     outline: none;
-    border-radius: 5px;
+    border-radius: 7px;
     border: 1px solid #ccc;
-    padding-left: 15px;
     font-size: 16px;
     border-bottom-width: 2px;
     transition: all 0.3s ease;
 }
 
-.register-input .input-box input:focus,
-.register-input .input-box input:valid {
+.form_register span {
+    display: flex;
+    font-size: 16px;
+    font-weight: 500;
+    padding-bottom: 5px;
+}
+
+.form_register input:focus {
     border-color: #9b59b6
 }
 
-form .button {
-    height: 45px;
-    margin: 45px0;
-}
-
-form .button input {
-    height: 100%;
-    width: 100%;
+form .button_register {
+    justify-content: center;
+    display: flex;
+    margin: 0 auto;
+    height: 5vh;
+    width: 40%;
+    padding-top: 0.7vh;
     outline: none;
     color: #fff;
     border: none;
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 16px;
     border-radius: 5px;
-    letter-spacing: 1px;
-    background: linear-gradient(135deg, #7b71e6, #9b59b6)
+    letter-spacing: 2px;
+    background: linear-gradient(135deg, #7b71e6, #9b59b6);
+    cursor: pointer;
 }
 
-form .button input:hover {
-    background: linear-gradient(-135deg, #7b71e6, #9b59b6)
+form .button_register:hover {
+    background: linear-gradient(-135deg, #7b71e6, #9b59b6);
 }
 
-@media(max-width: 584px) {
-    .container {
-        max-width: 100%;
-    }
+/*                  Grafica                         */
 
-    form .register-input .input-box {
-        margin-bottom: 15px;
-        width: 100%;
-    }
-}
-
-.container form .register-input {
-    max-height: 300px;
-    overflow-y: scroll;
-}
-
-.register-input::-webkit-scrollbar {
-    width: 0;
-}
-/* ---------------------------   Categoria    ------------------------*/
-  
-  .select-box {
-    display: flex;
-    width: 200px;
-    flex-direction: column;
-
-    
-  }
-  
-  .select-box .options-container {
-    z-index: 2;
-    position: absolute;
-    background: white;
-    color: black;
-    max-height: 0;
-    width: 16.5%;
-    transform: translateY(50px);
-    opacity: 0;
-    transition: all 0.5s;
-    border-radius: 8px;
-    overflow: hidden;
-    order: 1;
-    border: 1px solid #ccc;
-  }
-  
-  .selected {
-    background: white;
-    border-radius: 8px;
-    margin-bottom: 8px;
-    color: black;
+main .right-section {
+    width: 45%;
     position: relative;
-    order: 0;
-    border: 1px solid #ccc;
-   
-  }
-  
-  .selected::after {
-    content: "";
-    
-    background-size: contain;
-    background-repeat: no-repeat;
-  
-    position: absolute;
-    height: 100%;
-    width: 32px;
-    right: 10px;
-    top: 5px;
-  
-    transition: all 0.4s;
-  }
-  
-  .select-box .options-container.active {
-    max-height: 240px;
-    opacity: 1;
-    overflow-y: scroll;
-  }
-  
-  .select-box .options-container.active + .selected::after {
-    transform: rotateX(180deg);
-    top: -6px;
-  }
-  
-  .select-box .options-container::-webkit-scrollbar {
-    width: 8px;
-    background: #0d141f;
-    border-radius: 0 8px 8px 0;
-  }
-  
-  .select-box .options-container::-webkit-scrollbar-thumb {
-    background: #525861;
-    border-radius: 0 8px 8px 0;
-  }
-  
-  .select-box .option,
-  .selected {
-    padding: 12px 24px;
-    cursor: pointer;
-  }
-  
-  .select-box .option:hover {
-    background: #f2f2f2;
-  }
-  
-  .select-box label {
-    cursor: pointer;
-  }
-  
-  .select-box .option .radio {
-    display: none;
-  }
+    display: flex;
+}
 
+main .right-section .graphic_history {
+    width: 100%;
+    height: 100%;
+}
+
+#columnchart_material {
+    width: 95%;
+    height: 100%;
+}
 
 /*       -------------------------- Table -------------------------------         */
 
-table {
-    background: #a37da7;
-    text-align: left;
+
+main .history_table {
     width: 100%;
-
-    border-collapse: collapse;
+    margin-top: 20px;
 }
 
-th,
-td {
-    padding: 9px;
-    border-right: solid 1px white;
-    color: white;
+main .history_table .card {
+    width: 100%;
+    min-height: 60vh;
+    margin-top: 20px;
+    max-height: 326px;
+    overflow-y: scroll;
 }
 
-thead {
-    background-color: #7F5A83;
-    ;
-    border-bottom: solid 5px white;
-    color: white;
+main .history_table .card::-webkit-scrollbar {
+    width: 10px;
+    background-color: rgb(203, 208, 212);
+}
+
+main .history_table .card::-webkit-scrollbar-thumb {
+    background-color: #9c59b6d8;
+    border-radius: 10px;
+}
+
+.history_table #title_historial {
+    font-weight: 600;
+    font-size: 24px;
+}
+
+#table_expense_wrapper,
+.filter.section {
+    padding-top: 20px;
+}
+
+#table_expense_length {
+    padding-bottom: 20px;
+}
+
+#table_expense_filter {
+    visibility: hidden;
 }
 
 tr:nth-child(odd) {
     background-color: #995e9f;
 }
 
-tbody tr:hover {
-    background: rgba(149, 90, 149, 0.4)
+.dataTable {
+    width: 50px;
 }
 
-/* -------- more card -------------- */
+.even td {
+    background: #a37da7;
 
-main .data {
-
-    display: flex;
-    grid-gap: 20px;
-    margin-top: 20px;
 }
 
-main .data .expenses_page {
-    padding: 20px;
-    width: 60%;
-    height: 40%;
+.odd td {
+    background: #995e9f;
 }
 
-main .right-section {
-    width: 30%;
-    max-height: 450px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.filters {
+    background: #995e9f;
 }
 
-main .right-section .graphic_history {
-    width: 470px;
-
-    padding: 20px;
-    height: 100%;
-    transform: translate(47px);
+.filters input {
+    width: 100%;
+    height: 30px;
+    padding-left: 5px;
+    font-size: 13px;
+    transform: translate(-7px);
 }
 
-#columnchart_material {
-    width: 400px;
-    height: 295px;
-    
-}
-
-main .graphic_history li .progress::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    background: var(--blue);
-    width: var(--value);
+tr {
+    color: white;
 }
 
 
-main .history_table {
-    display: flex;
-    grid-gap: 20px;
-    margin-top: 20px;
-    flex-wrap: wrap;
-}
 
-main .history_table .card {
-    flex-grow: 1;
-    height: 290px;
-    padding: 20px;
-}
-
-/* Flter */
-
-.filter-section {
-    display: flex;
-    flex-direction: column;
-    margin: 20px;
-}
-
-.filter-section input {
-    height: 45px;
-    width: 20%;
-    outline: none;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    padding-left: 15px;
-    font-size: 16px;
-    border-bottom-width: 2px;
-    transition: all 0.3s ease;
-}
-
-.filter-section h2 {
-    margin-bottom: 20px;
-}
-
-.filter-section form {
-    margin-bottom: 30px;
-}
-
-.filter-section button{
-    height: 45px;
-    width: 15%;
-    margin-left: 280px;
-    color: #fff;
-    outline: none;
-    background-color: #995e9f;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    font-size: 16px;
-    border-bottom-width: 2px;
-    transition: all 0.3s ease;
-}
-
-.filter-section button:hover {
-    border: 2px solid #995e9f;
-    background-color: #fff;
-    color: #995e9f;
-    cursor: pointer;
-    font-weight: bolder;
-}
-
-/* Flter */
