--- a/styles/incomes.css
+++ b/styles/incomes.css
@@ -189,6 +189,21 @@ tr:nth-child(odd) {
     background: #995e9f;
 }
 
+td button{  
+    justify-content: center;
+    display: flex;
+    padding-top: 1px;
+    width: 74px;
+    height: 22px;
+    color: #fff;
+    border: none;
+    font-size: 14px;
+    border-radius: 5px;
+    background: #7b71e6;
+    cursor: pointer;
+    font-weight: 500;
+}
+
 .filters input {
     width: 100%;
     height: 30px;
